@@ -1,10 +1,10 @@
 <?xml version='1.0' encoding='UTF-8' standalone='yes'?>
-<addon id="plugin.video.youtube" name="YouTube" provider-name="TheCollective" version="4.4.6">
+<addon id="plugin.video.youtube" name="YouTube" provider-name="TheCollective" version="4.4.8">
   <requires>
     <import addon="xbmc.python" version="2.1.0" />
     <import addon="script.module.simplejson" version="2.0.10" />
     <import addon="script.common.plugin.cache" version="2.5.2" />
-    <import addon="script.module.parsedom" version="2.5.1" />
+    <import addon="script.module.parsedom" version="2.5.2" />
     <import addon="script.module.simple.downloader" version="1.9.4" />
   </requires>
   <extension library="default.py" point="xbmc.python.pluginsource">
